--- a/static/home.html
+++ b/static/home.html
@@ -34,11 +34,11 @@
 <body>
     <div class="container mt-5">
         <h1 class="mb-4">Welcome to the Ver Home Page</h1>
-        <img src="static/images/logo-HQ.png" alt="Ver Logo" class="logo"> <!-- Update with the correct path to your logo -->
+        <img src="static/logo-HQ.png" alt="Ver Logo" class="logo"> <!-- Update with the correct path to your logo -->
         <div class="row mt-4">
             <div class="col-md-8">
-                <button onclick="window.location.href='static/index.html'" class="btn btn-success btn-home">Connect your device to Bluetooth</button>
-                <button onclick="window.location.href='static/customise_page.html'" class="btn btn-primary btn-home">Customise Your Buttons</button>
+                <button onclick="window.location.href='static/bluetooth2.html'" class="btn btn-success btn-home">Device Set-Up </button>
+                <button onclick="window.location.href='static/customise_page2.html'" class="btn btn-primary btn-home">Customisation Settings</button>
                 <!-- Add more buttons as needed -->
             </div>
         </div>
