--- a/static/bluetooth5.html
+++ b/static/bluetooth5.html
@@ -47,63 +47,76 @@
         <div id="error-details" class="alert alert-danger" style="display: none;"></div>
         <div class="row mt-4">
             <div class="col">
-                <button class="btn btn-primary btn-lg" id="scan-button">Scan for Devices</button>
-                <ul id="device-list" class="list-group mt-3"></ul>
+                <button class="btn btn-primary btn-lg" data-bs-toggle="collapse" data-bs-target="#bluetoothMenu" aria-expanded="false" aria-controls="bluetoothMenu" id="bluetoothMenuButton">
+                    Connect to Bluetooth Device
+                </button>
+                <div class="collapse" id="bluetoothMenu">
+                    <button class="btn btn-secondary btn-lg mt-3" id="scan-button">Scan for Devices</button>
+                    <ul id="device-list" class="list-group mt-3"></ul>
+                </div>
+            </div>
+            <div class="col">
+                <a href="/" class="btn btn-success btn-lg" id="homeButton">Home Page</a>
             </div>
         </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"></script>
     <script>
+        const socket = io('http://localhost:5000', {
+            transports: ['polling'],
+            upgrade: false
+        });
         const scanButton = document.getElementById('scan-button');
         const statusDiv = document.getElementById('status');
         const errorDetailsDiv = document.getElementById('error-details');
         const deviceList = document.getElementById('device-list');
+        const bluetoothMenuButton = document.getElementById('bluetoothMenuButton');
+        const homeButton = document.getElementById('homeButton');
 
-        function decodeDeviceName(name) {
-            try {
-                return decodeURIComponent(escape(name));
-            } catch (e) {
-                console.warn('Failed to decode device name:', e);
-                return name;
-            }
+        function speakText(text) {
+            const utterance = new SpeechSynthesisUtterance(text);
+            window.speechSynthesis.speak(utterance);
         }
+
+        function cancelTTS() {
+            window.speechSynthesis.cancel();
+        }
+
+        function showError(message) {
+            console.error(message);
+            statusDiv.textContent = 'Error occurred';
+            errorDetailsDiv.textContent = message;
+            errorDetailsDiv.style.display = 'block';
+            speakText('An error occurred. Check the error details for more information.');
+        }
+
+        const ttsEnabled = localStorage.getItem('ttsEnabled') === 'true';
+
+        bluetoothMenuButton.addEventListener('click', function() {
+            speakText('Bluetooth connection menu opened.');
+        });
 
         scanButton.addEventListener('click', function() {
             statusDiv.textContent = 'Scanning for devices...';
             deviceList.innerHTML = '';
             errorDetailsDiv.style.display = 'none';
-
-            fetch('/scan')
-                .then(response => response.json())
-                .then(data => {
-                    if (data.success) {
-                        displayDevices(data.devices);
-                    } else {
-                        throw new Error(data.error);
-                    }
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    statusDiv.textContent = 'Failed to scan for devices';
-                    errorDetailsDiv.textContent = `Error: ${error.message}`;
-                    errorDetailsDiv.style.display = 'block';
-                });
+            speakText('Scanning for devices...');
+            socket.emit('scan_devices');
         });
 
         function displayDevices(devices) {
             statusDiv.textContent = 'Scan complete. Found ' + devices.length + ' devices.';
-
+            speakText('Scan complete. Found ' + devices.length + ' devices.');
             deviceList.innerHTML = '';
-
             if (devices.length > 0) {
                 devices.forEach(device => {
                     const listItem = document.createElement('li');
                     listItem.classList.add('list-group-item', 'd-flex', 'justify-content-between', 'align-items-center');
                     const deviceInfo = document.createElement('div');
-                    const decodedName = decodeDeviceName(device.name);
                     deviceInfo.innerHTML = `
-                        <span class="device-name">${decodedName}</span><br>
+                        <span class="device-name">${device.name}</span><br>
                         <span class="device-address">${device.address}</span>
                     `;
                     const connectButton = document.createElement('button');
@@ -125,29 +138,37 @@
         function connectToDevice(device) {
             statusDiv.textContent = `Connecting to ${device.name}...`;
             errorDetailsDiv.style.display = 'none';
-
-            fetch('/connect', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ address: device.address }),
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    statusDiv.textContent = `Connected to ${device.name}`;
-                } else {
-                    throw new Error(data.error);
-                }
-            })
-            .catch(error => {
-                console.error('Error:', error);
-                statusDiv.textContent = `Error connecting to ${device.name}`;
-                errorDetailsDiv.textContent = `Error: ${error.message}`;
-                errorDetailsDiv.style.display = 'block';
-            });
+            speakText(`Connecting to ${device.name}...`);
+            socket.emit('connect_device', { address: device.address });
         }
+
+        socket.on('connect', function() {
+            console.log('Connected to server');
+        });
+
+        socket.on('connect_error', function(error) {
+            showError('Connection error: ' + error.message);
+        });
+
+        socket.on('scan_results', function(data) {
+            displayDevices(data.devices);
+        });
+
+        socket.on('connect_result', function(data) {
+            if (data.success) {
+                statusDiv.textContent = `Connected to ${data.device_name}`;
+                speakText(`Connected to ${data.device_name}`);
+            } else {
+                showError(`Error connecting to device: ${data.error}`);
+            }
+        });
+
+        homeButton.addEventListener('click', function() {
+            speakText('Navigating to Home Page.');
+        });
+
+        window.addEventListener('beforeunload', cancelTTS);
+        homeButton.addEventListener('click', cancelTTS);
     </script>
 </body>
 </html>
