--- a/static/bluetooth4.html
+++ b/static/bluetooth4.html
@@ -17,88 +17,117 @@
         }
         .btn {
             width: 100%;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
             padding: 20px;
+            font-size: 1.2rem;
         }
         #device-list {
             margin-top: 20px;
         }
-        #error-details {
-            white-space: pre-wrap;
-            font-family: monospace;
-            font-size: 0.8em;
-            max-height: 200px;
-            overflow-y: auto;
+        .device-card {
+            transition: all 0.3s ease;
+            margin-bottom: 20px;
         }
-        .device-name {
-            font-weight: bold;
-            font-size: 1.1em;
+        .device-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
-        .device-address {
-            font-size: 0.9em;
-            color: #6c757d;
+        .slider {
+            position: fixed;
+            top: 20px;
+            left: 20px;
+            z-index: 1000;
+            display: flex;
+            align-items: center;
+        }
+        .slider input[type="checkbox"] {
+            width: 50px;
+            height: 25px;
+            -webkit-appearance: none;
+            appearance: none;
+            background-color: #ddd;
+            outline: none;
+            border-radius: 25px;
+            position: relative;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        .slider input[type="checkbox"]:checked {
+            background-color: #28a745;
+        }
+        .slider-label {
+            margin-left: 10px;
+            font-size: 1rem;
+            font-family: 'Orbitron', sans-serif;
         }
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <div class="container p-5">
-        <h1>Connect to your Bluetooth Device</h1>
-        <div id="status" class="alert alert-info">Not scanning</div>
-        <div id="error-details" class="alert alert-danger" style="display: none;"></div>
+    <!-- TTS Toggle -->
+    <div class="slider">
+        <input type="checkbox" id="ttsToggle">
+        <label for="ttsToggle" class="slider-label">Text to Speech</label>
+    </div>
+
+    <div class="container mt-5">
+        <h1 class="mb-4 text-center">Bluetooth Device Scanner</h1>
+        
         <div class="row mt-4">
-            <div class="col">
-                <button class="btn btn-primary btn-lg" data-bs-toggle="collapse" data-bs-target="#bluetoothMenu" aria-expanded="false" aria-controls="bluetoothMenu" id="bluetoothMenuButton">
-                    Connect to Bluetooth Device
-                </button>
-                <div class="collapse" id="bluetoothMenu">
-                    <button class="btn btn-secondary btn-lg mt-3" id="scan-button">Scan for Devices</button>
-                    <ul id="device-list" class="list-group mt-3"></ul>
+            <div class="col-md-8 offset-md-2">
+                <button id="scan-button" class="btn btn-success">Scan for Devices</button>
+                <button onclick="window.location.href='../'" class="btn btn-primary">Home</button>
+                <div id="status" class="alert alert-info mt-3">Not scanning</div>
+                <div id="error-details" class="alert alert-danger mt-3" style="display: none;" role="alert">
+                    <strong>Error!</strong>
+                    <span id="error-message"></span>
                 </div>
             </div>
-            <div class="col">
-                <a href="/" class="btn btn-success btn-lg" id="homeButton">Home Page</a>
-            </div>
+        </div>
+
+        <div id="device-list" class="row mt-4">
+            <!-- Device cards will be dynamically inserted here -->
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         const scanButton = document.getElementById('scan-button');
         const statusDiv = document.getElementById('status');
         const errorDetailsDiv = document.getElementById('error-details');
+        const errorMessageSpan = document.getElementById('error-message');
         const deviceList = document.getElementById('device-list');
-        const bluetoothMenuButton = document.getElementById('bluetoothMenuButton');
-        const homeButton = document.getElementById('homeButton');
+        const ttsToggle = document.getElementById('ttsToggle');
 
         function speakText(text) {
-            const utterance = new SpeechSynthesisUtterance(text);
-            window.speechSynthesis.speak(utterance);
+            if (ttsToggle.checked) {
+                const utterance = new SpeechSynthesisUtterance(text);
+                window.speechSynthesis.speak(utterance);
+            }
         }
 
         function cancelTTS() {
             window.speechSynthesis.cancel();
         }
 
-        const ttsEnabled = localStorage.getItem('ttsEnabled') === 'true';
-
-        if (ttsEnabled) {
-            speakText("You are on the Bluetooth Device Scanner and Connector page.");
+        function showError(message) {
+            errorMessageSpan.textContent = message;
+            errorDetailsDiv.style.display = 'block';
+            speakText('An error occurred. ' + message);
         }
 
-        bluetoothMenuButton.addEventListener('click', function() {
-            if (ttsEnabled) {
-                speakText('Bluetooth connection menu opened.');
-            }
-        });
+        function hideError() {
+            errorDetailsDiv.style.display = 'none';
+        }
+
+        function updateStatus(message) {
+            statusDiv.textContent = message;
+            speakText(message);
+        }
 
         scanButton.addEventListener('click', function() {
-            statusDiv.textContent = 'Scanning for devices...';
+            updateStatus('Scanning for devices...');
             deviceList.innerHTML = '';
-            errorDetailsDiv.style.display = 'none';
-            
-            if (ttsEnabled) {
-                speakText('Scanning for devices...');
-            }
+            hideError();
 
             fetch('/scan')
                 .then(response => response.json())
@@ -111,92 +140,91 @@
                 })
                 .catch(error => {
                     console.error('Error:', error);
-                    statusDiv.textContent = 'Failed to scan for devices';
-                    errorDetailsDiv.textContent = `Error: ${error.message}`;
-                    errorDetailsDiv.style.display = 'block';
-                    if (ttsEnabled) {
-                        speakText('Failed to scan for devices. Check the error details for more information.');
-                    }
+                    updateStatus('Failed to scan for devices');
+                    showError(error.message);
                 });
         });
 
         function displayDevices(devices) {
-            statusDiv.textContent = 'Scan complete. Found ' + devices.length + ' devices.';
-            if (ttsEnabled) {
-                speakText('Scan complete. Found ' + devices.length + ' devices.');
-            }
+            updateStatus('Scan complete. Found ' + devices.length + ' devices.');
 
             deviceList.innerHTML = '';
 
             if (devices.length > 0) {
                 devices.forEach(device => {
-                    const listItem = document.createElement('li');
-                    listItem.classList.add('list-group-item', 'd-flex', 'justify-content-between', 'align-items-center');
-                    const deviceInfo = document.createElement('div');
-                    deviceInfo.innerHTML = `
-                        <span class="device-name">${device.name}</span><br>
-                        <span class="device-address">${device.address}</span>
-                    `;
-                    const connectButton = document.createElement('button');
-                    connectButton.textContent = 'Connect';
-                    connectButton.classList.add('btn', 'btn-sm', 'btn-primary');
-                    connectButton.addEventListener('click', () => connectToDevice(device));
-                    listItem.appendChild(deviceInfo);
-                    listItem.appendChild(connectButton);
-                    deviceList.appendChild(listItem);
+                    const deviceCard = createDeviceCard(device);
+                    deviceList.appendChild(deviceCard);
                 });
             } else {
-                const noDeviceItem = document.createElement('li');
-                noDeviceItem.classList.add('list-group-item');
-                noDeviceItem.textContent = 'No devices found.';
-                deviceList.appendChild(noDeviceItem);
+                deviceList.innerHTML = '<p class="col-12 text-center">No devices found.</p>';
             }
         }
 
+        function createDeviceCard(device) {
+            const card = document.createElement('div');
+            card.className = 'col-md-4';
+            card.innerHTML = `
+                <div class="device-card card">
+                    <div class="card-body">
+                        <h5 class="card-title">${device.name}</h5>
+                        <p class="card-text">${device.address}</p>
+                        <button class="btn btn-primary connect-button">Connect</button>
+                    </div>
+                </div>
+            `;
+
+            const connectButton = card.querySelector('.connect-button');
+            connectButton.addEventListener('click', () => connectToDevice(device));
+
+            return card;
+        }
+
         function connectToDevice(device) {
-            statusDiv.textContent = `Connecting to ${device.name}...`;
-            errorDetailsDiv.style.display = 'none';
-            if (ttsEnabled) {
-                speakText(`Connecting to ${device.name}...`);
-            }
+            updateStatus(`Connecting to ${device.name}...`);
+            hideError();
 
             fetch('/connect', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
                 },
-                body: JSON.stringify({ address: device.address }),
+                body: JSON.stringify({ address: device.address, name: device.name }),
             })
             .then(response => response.json())
             .then(data => {
                 if (data.success) {
-                    statusDiv.textContent = `Connected to ${device.name}`;
-                    if (ttsEnabled) {
-                        speakText(`Connected to ${device.name}`);
-                    }
+                    updateStatus(`Connected to ${device.name}. Bluetooth address: ${data.bluetooth_address}`);
+                    localStorage.setItem('deviceAddress', data.bluetooth_address);
                 } else {
                     throw new Error(data.error);
                 }
             })
             .catch(error => {
                 console.error('Error:', error);
-                statusDiv.textContent = `Error connecting to ${device.name}`;
-                errorDetailsDiv.textContent = `Error: ${error.message}`;
-                errorDetailsDiv.style.display = 'block';
-                if (ttsEnabled) {
-                    speakText(`Error connecting to ${device.name}. Check the error details for more information.`);
-                }
+                updateStatus(`Error connecting to ${device.name}`);
+                showError(error.message);
             });
         }
 
-        homeButton.addEventListener('click', function() {
-            if (ttsEnabled) {
-                speakText('Navigating to Home Page.');
-            }
-        });
+        // Initialize TTS toggle
+        window.onload = function() {
+            const ttsEnabled = localStorage.getItem('ttsEnabled');
+            ttsToggle.checked = ttsEnabled === 'true';
 
+            ttsToggle.addEventListener('change', function() {
+                localStorage.setItem('ttsEnabled', this.checked ? 'true' : 'false');
+                if (this.checked) {
+                    speakText("Text to Speech is now activated.");
+                } else {
+                    speakText("Text to Speech is now deactivated.");
+                }
+            });
+
+            speakText("Welcome to the Bluetooth Device Scanner and Connector.");
+        };
+
+        // Cancel TTS when navigating away
         window.addEventListener('beforeunload', cancelTTS);
-        homeButton.addEventListener('click', cancelTTS);
     </script>
 </body>
 </html>
